2003-04-10  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	* src/sj-prefs.[ch]: Promote glade-test.c and prefs-test.c here.
	* src/Makefile.am: Updated to install the sound-juicer binary.

	* tests/glade-test.c:
	* tests/prefs-test.[ch]: Removed.
	* tests/Makefile.am: Updated.

	* data/Makefile.am: Install orange-slice.png.

	* AUTHORS:
	* README:
	* TODO: Updated.

2003-04-09  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.[ch]: Add a method to get the TrackDetails of
	the current track.

	* tests/glade-test.c: Set window icons.
	
	* src/sj-extracting.[ch]: Pull the UI extracting code out.

	* src/sj-about.c: Set a window icon.

	* src/sound-juicer.h: More public fields.

	* tests/Makefile.am: Turn on all deprecation warnings, and fix
	mb-test linking.

	* TODO: Updated.

2003-04-09  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* .cvsignore:
	* data/.cvsignore:
	* po/.cvsignore:
	* src/.cvsignore:
	* tests/.cvsignore:
	Keep quiet CVS.

2003-04-07  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Added "ca" (Catalan).

2003-04-07  Ross Burton  <ross@burtonini.com>

	* README:
	* NEWS: Updated.

	* src/sj-about.[ch]: Added.

	* sound-juicer.h: Added common header file.

	* configure.in: Put config.h into src/

	* data/sound-juicer.glade: s/Refresh/Re-read/.

	* src/*.[ch]: Added licence text.

	* tests/glade-test.c:
	* tests/prefs-test.c:
	More work, refactoring, etc.

2003-04-04  Ross Burton  <ross@burtonini.com>

	* data/orange-slice.png: Groovy logo from Tigert.
	* data/logo.xcf: Remove this terrible example of my graphical skills.
	* tests/glade-test.c (on_about_activate): Added a cool logo.

	* tests/prefs-test.c:
	* tests/glade-test.c:
	Start to pull the prefences code out.

2003-04-04  Ross Burton  <ross@burtonini.com>

	* configure.in: Update source check as I removed sj-gstreamer.c

2003-04-04  Ross Burton  <ross@burtonini.com>

	* tests/data-test.c:
	* tests/gst-test.c:
	Removed

	* tests/Makefile.am: Updated.
