@@ -2,6 +2,7 @@
 <!DOCTYPE glade-interface SYSTEM "http://glade.gnome.org/glade-2.0.dtd">
 
 <glade-interface>
+<requires lib="gnome"/>
 
 <widget class="GtkWindow" id="main_window">
   <property name="width_request">350</property>
@@ -27,9 +28,8 @@
 
 	  <child>
 	    <widget class="GtkMenuItem" id="menuitem1">
-	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">_File</property>
-	      <property name="use_underline">True</property>
+   	      <property name="visible">True</property>
+	      <property name="stock_item">GNOMEUIINFO_MENU_FILES_TREE</property>
 
 	      <child>
 		<widget class="GtkMenu" id="menuitem1_menu">
@@ -87,22 +87,8 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="quit">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">_Quit</property>
-		      <property name="use_underline">True</property>
+		      <property name="stock_item">GNOMEUIINFO_MENU_EXIT_ITEM</property>
 		      <signal name="activate" handler="on_quit_activate" last_modification_time="Tue, 25 Mar 2003 18:52:39 GMT"/>
-		      <accelerator key="Q" modifiers="GDK_CONTROL_MASK" signal="activate"/>
-
-		      <child internal-child="image">
-			<widget class="GtkImage" id="image55">
-			  <property name="visible">True</property>
-			  <property name="stock">gtk-quit</property>
-			  <property name="icon_size">1</property>
-			  <property name="xalign">0.5</property>
-			  <property name="yalign">0.5</property>
-			  <property name="xpad">0</property>
-			  <property name="ypad">0</property>
-			</widget>
-		      </child>
 		    </widget>
 		  </child>
 		</widget>
@@ -113,8 +99,7 @@
 	  <child>
 	    <widget class="GtkMenuItem" id="menuitem2">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">_Edit</property>
-	      <property name="use_underline">True</property>
+	      <property name="stock_item">GNOMEUIINFO_MENU_EDIT_TREE</property>
 
 	      <child>
 		<widget class="GtkMenu" id="menuitem2_menu">
@@ -122,10 +107,8 @@
 		  <child>
 		    <widget class="GtkMenuItem" id="select_all">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Select _All</property>
-		      <property name="use_underline">True</property>
+		      <property name="stock_item">GNOMEUIINFO_MENU_SELECT_ALL_ITEM</property>
 		      <signal name="activate" handler="on_select_all_activate" last_modification_time="Tue, 01 Apr 2003 06:36:30 GMT"/>
-		      <accelerator key="A" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 		    </widget>
 		  </child>
 
@@ -138,22 +121,8 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="edit_preferences">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Prefere_nces</property>
-		      <property name="use_underline">True</property>
+		      <property name="stock_item">GNOMEUIINFO_MENU_PREFERENCES_ITEM</property>
 		      <signal name="activate" handler="on_edit_preferences_cb" last_modification_time="Tue, 25 Mar 2003 08:37:30 GMT"/>
-		      <accelerator key="P" modifiers="GDK_CONTROL_MASK" signal="activate"/>
-
-		      <child internal-child="image">
-			<widget class="GtkImage" id="image56">
-			  <property name="visible">True</property>
-			  <property name="stock">gtk-preferences</property>
-			  <property name="icon_size">1</property>
-			  <property name="xalign">0.5</property>
-			  <property name="yalign">0.5</property>
-			  <property name="xpad">0</property>
-			  <property name="ypad">0</property>
-			</widget>
-		      </child>
 		    </widget>
 		  </child>
 		</widget>
@@ -164,8 +133,7 @@
 	  <child>
 	    <widget class="GtkMenuItem" id="menuitem4">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">_Help</property>
-	      <property name="use_underline">True</property>
+              <property name="stock_item">GNOMEUIINFO_MENU_HELP_TREE</property>
 
 	      <child>
 		<widget class="GtkMenu" id="menuitem4_menu">
@@ -173,21 +141,8 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="about">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">_About</property>
-		      <property name="use_underline">True</property>
+		      <property name="stock_item">GNOMEUIINFO_MENU_ABOUT_ITEM</property>
 		      <signal name="activate" handler="on_about_activate" last_modification_time="Thu, 20 Mar 2003 18:36:52 GMT"/>
-
-		      <child internal-child="image">
-			<widget class="GtkImage" id="image57">
-			  <property name="visible">True</property>
-			  <property name="stock">gnome-stock-about</property>
-			  <property name="icon_size">1</property>
-			  <property name="xalign">0.5</property>
-			  <property name="yalign">0.5</property>
-			  <property name="xpad">0</property>
-			  <property name="ypad">0</property>
-			</widget>
-		      </child>
 		    </widget>
 		  </child>
 		</widget>
