@@ -1,3 +1,15 @@
+2003-04-10  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* data/sound-juicer.glade:
+	Use Stock entries.
+
+	* src/Makefile.am:
+	* src/sj-main.c: (main):
+	Ensure everything is initialized correctly.
+
+	* src/sj-about.c: (on_about_activate):
+	Remove some TODO.
+
 2003-04-10  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-main.c:
